@@ -14,6 +14,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 	 
+19-11-14 mma (exhadr04-V10-00-06)
+- cosmetic in envHadronic.csh
+	 
 11-09-14 mma (exhadr04-V10-00-05)
 - Hadr04.cc : SetNumberOfThreads(G4Threading::G4GetNumberOfCores())
 
